--- a/Weight of Evidence-GermanCredit.ipynb
+++ b/Weight of Evidence-GermanCredit.ipynb
@@ -174,7 +174,6 @@
     "data.rename(columns ={\"Risk\": \"TARGET\"}, inplace = True)\n",
     "X = data.drop('TARGET', axis = 1)\n",
     "y = data['TARGET']\n",
-    "#X = pd.get_dummies(X.select_dtypes('category'))\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2, random_state = 42, stratify = y)\n",
     "print('Dimenzije trening skupa: ', X_train.shape)\n",
     "X_train.head()"
@@ -217,15 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import pandas.core.algorithms as algos\n",
-    "from pandas import Series\n",
-    "import scipy.stats.stats as stats\n",
-    "import re\n",
-    "import traceback\n",
-    "import string\n",
-    "\n",
+    "#izracunavanje woe vrednosti\n",
     "max_bin = 20\n",
     "force_bin = 3\n",
     "\n",
@@ -1514,7 +1505,6 @@
    ],
    "source": [
     "vars=['Checking account','Duration','Saving accounts']\n",
-    "#vars=['Checking account']\n",
     "WOE_transformation(X_train,vars)\n",
     "WOE_transformation(X_test,vars)"
    ]
